Fix background image bug. Tweak category lists and signup form input width on small devices.

--- a/theme/scss/base/_background-image.scss
+++ b/theme/scss/base/_background-image.scss
@@ -4,20 +4,16 @@
 
 .bg {
     background-repeat: no-repeat;
-    background-size: 175vh;
-    background-position: 100% 0;
     background-image: image-url('header-bg-1.svg');
+    background-color: get-color('base', 'white');
 
-    @include bk(small) {
-        background-position: 100% -100px;
+    @include bk(large) {
+        background-position: 100% -40px;
+        background-size: auto 400px;
     }
 
-    @include bk(medium) {
-        background-size: 150vh;
-        background-position: 25% -100px;
+    @include breakpoint(1600px) {
+        background-size: auto 500px;
     }
 
-    @media screen and(min-height: 900px) {
-        background-size: 150vh;
-    }
 }
