--- a/theme/scss/modules/_categories-list.scss
+++ b/theme/scss/modules/_categories-list.scss
@@ -12,7 +12,8 @@
         left: 0;
         width: 100%;
         overflow-y: scroll;
-        transition: transform .15s cubic-bezier(0.4, 0, 0.2, 1);
+        opacity: 0;
+        transition: transform .15s cubic-bezier(0.4, 0, 0.2, 1), opacity 0s linear .15s;
         transform: translateY(900px);
         background-color: get-color(brand, primary);
         color: get-color(base, 'white');
@@ -20,8 +21,9 @@
 
         &.is-active {
             position: absolute;
-            transition: transform .15s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: transform .15s cubic-bezier(0.4, 0, 0.2, 1), opacity 0s linear;
             transform: translateY(0);
+            opacity: 1;
             pointer-events: auto;
         }
     }
